# downloader-cli

./: Cargo.toml  Makefile  README.md  options.txt
.github/: CONTRIBUTING.md  config.toml
src/: builder.rs  config.rs  lib.rs  main.rs  reporter.rs
src/config/: app.rs  cli.rs
src/reporter/: console_reporter.rs  program_flow.rs  silent_reporter.rs
